# pico-gsm

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  sample.c
gsm/: CMakeLists.txt  gsm.c  gsm.h
